# head-count-planner

./: README.md
client/: .env  index.html  package-lock.json  package.json
client/src/: App.tsx  global.css  main.tsx  routeTree.gen.ts
client/src/api/: cost.ts  global.client.ts  llm.ts  request.ts  revenue.ts  scenario.ts
client/src/api/auth/: auth.ts
client/src/components/: nav-main.tsx  site-header.tsx
client/src/components/app-sidebar/: AppSidebar.tsx
client/src/components/matrix-card/: index.ts  (+1 more)
client/src/data/: cost-item.ts  scenario-templates.ts
client/src/providers/: QueryClient.tsx  ThemeProvider.tsx
client/src/routes/: auth.tsx  dashboard.overheads.tsx  dashboard.pipelines.tsx  dashboard.quick-create.tsx  dashboard.scenario.tsx  dashboard.tsx  index.tsx
client/src/utils/: cookie.ts  month-utils.ts  number-format.ts  route-guard.ts  scenario-metrics.ts  tokens.ts
service/: .gitignore  makefile  pyproject.toml
service/app/: config.py  main.py
service/app/middleware/: auth.py
service/app/models/: cost.py  revenue.py  scenario.py  user.py
service/app/repositories/: cost_repo.py  revenue_repo.py  scenario_repo.py  user_repo.py
service/app/router/: costs.py  google_auth.py  llm.py  revenues.py  scenarios.py
service/app/services/: llm_service.py
service/app/services/base/: auth_service.py
service/app/services/default/: auth_serivce.py
service/app/utils/: tokens.py
service/migrations/models/: 0_20251119030013_init.py  1_20251119234840_update.py  2_20251120153206_update.py  3_20251120171822_update.py  4_20251121012343_update.py
(+42 files in other folders)
